modify email, rebate chart size, product write view, redirect myPayments